Skip to content

`input-slave` can't open subtitles except `.mks`

Unable to open subtitles from HTTP with the argument :sub-file=http://...

  • on Windows VLC is unable to open the MRL 'file:///C:/Windows/System32/%22http%3A%2F%2F...
  • on Linux VLC is unable to open the MRL 'file:///home/oem/http%3A//...

input-slave can't open subtitles except .mks

VLC 3.0.12, 2.2.8, 20210330-0425

Edited by Роман
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information