input: fix `input-slave` option for subtitles

Since c34d719f, all files passed by the option `input-slave` were set as
audio tracks no matter what.
Theses changes force subtitle demux on files with a known spu extension.

Fixes #25549

Signed-off-by: Thomas Guillem <thomas@gllm.fr>